argo-rollouts-istio-host/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: canary-demo-host
spec:
  replicas: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: canary-demo-host
  template:
    metadata:
      labels:
        app: canary-demo-host
    spec:
      containers:
      - name: canary-demo-host
        image: nginx:1.21.5
        ports:
        - name: http
          containerPort: 8000
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 5m
  strategy:
    canary:
      canaryService: canary-demo-canary
      stableService: canary-demo-stable
      trafficRouting:
        istio:
          virtualService:
            name: canary-demo-host-vsvc
            routes:
            - primary
      maxSurge: "20%"
      maxUnavailable: 50%
      scaleDownDelaySeconds: 1
      steps:
      - setCanaryScale:
          weight: 25
      - pause: {}         # pause indefinitely
#       - setWeight: 40
#       - pause: {duration: 10}
#       - setWeight: 60
#       - pause: {duration: 10}
#       - setWeight: 80
#       - pause: {duration: 10}
