argo-rollouts-istio-host/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-demo-stable
spec:
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: canary-demo-host

---

apiVersion: v1
kind: Service
metadata:
  name: canary-demo-canary
spec:
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: canary-demo-host
