argo-rollouts-istio-host/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: canary-demo-host-vsvc
spec:
  gateways:
  - test-gateway
  hosts:
  - "*"
  http:
  - name: primary
    match:
      - uri:
          exact: "/istio-argo-host"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: canary-demo-stable
#       weight: 100
#     - destination:
#         host: canary-demo-canary
#       weight: 0
